[#noissue] Refactor timestamp handling